// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Assignees should not output any assignees if an empty array is passed 1`] = `
<div>
  <div
    class="assignees svelte-61hcvm"
    title=""
  />
</div>
`;

exports[`Assignees should not output any assignees if not passed any users 1`] = `
<div>
  <div
    class="assignees svelte-61hcvm"
    title=""
  />
</div>
`;

exports[`Assignees should render a single assignee 1`] = `
<div>
  <div
    class="assignees svelte-61hcvm"
    title="Assigned to TEST USER"
  >
    <div
      class="gravatar svelte-ia86th"
    />
     
    
  </div>
</div>
`;

exports[`Assignees should render multiple assignees 1`] = `
<div>
  <div
    class="assignees svelte-61hcvm"
    title="Assigned to TEST USER, ANOTHER USER"
  >
    <div
      class="gravatar svelte-ia86th"
    />
     
    <span
      class="svelte-61hcvm"
    >
      +
      1
    </span>
    
  </div>
</div>
`;
